[package]
name = "ebpf-file-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcc = "0.0.34"
#std = { version = "0.2", features = ["slice::from_raw_parts"]}
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
inotify = "0.10.0"
